# ChangeLog for dev-perl/PadWalker
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/PadWalker/ChangeLog,v 1.27 2011/09/04 11:22:51 tove Exp $

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -PadWalker-1.920.ebuild:
  Cleanup

*PadWalker-1.920.0 (29 Aug 2011)

  29 Aug 2011; Torsten Veller <tove@gentoo.org> +PadWalker-1.920.0.ebuild:
  Change version scheme

*PadWalker-1.920 (14 Jan 2011)

  14 Jan 2011; Torsten Veller <tove@gentoo.org> -PadWalker-1.9.2.ebuild,
  +PadWalker-1.920.ebuild:
  Convert version

  13 Jan 2011; Brent Baude <ranger@gentoo.org> PadWalker-1.9.ebuild:
  Marking PadWalker-1.9 ppc for bug 341295

*PadWalker-1.9.2 (16 Jul 2010)

  16 Jul 2010; Torsten Veller <tove@gentoo.org> +PadWalker-1.9.2.ebuild:
  Version bump

  15 Jun 2010; Torsten Veller <tove@gentoo.org> PadWalker-1.9.ebuild:
  Stable on x86 (#323529)

  10 Jan 2010; Fabian Groffen <grobian@gentoo.org> PadWalker-1.9.ebuild:
  Transfer Prefix keywords

  12 Oct 2009; Torsten Veller <tove@gentoo.org> -PadWalker-1.5.ebuild:
  Cleanup

  07 Oct 2009; Tiago Cunha <tcunha@gentoo.org> PadWalker-1.9.ebuild:
  stable sparc, bug 283969

  18 Sep 2009; Torsten Veller <tove@gentoo.org> PadWalker-1.9.ebuild:
  Stable on amd64 (#283969)

  07 Sep 2009; Torsten Veller <tove@gentoo.org> -PadWalker-1.7.ebuild:
  Cleanup

*PadWalker-1.9 (27 Jun 2009)

  27 Jun 2009; Torsten Veller <tove@gentoo.org> +PadWalker-1.9.ebuild:
  Version bump

  02 May 2009; Torsten Veller <tove@gentoo.org> -PadWalker-1.2.ebuild:
  Cleanup

  09 Jan 2009; Joseph Jezak <josejx@gentoo.org> PadWalker-1.5.ebuild,
  PadWalker-1.7.ebuild:
  Marked ~ppc for bug #253430.

*PadWalker-1.7 (05 Oct 2008)

  05 Oct 2008; Torsten Veller <tove@gentoo.org> +PadWalker-1.7.ebuild:
  Version bump

  14 Apr 2007; Michael Cummings <mcummings@gentoo.org> PadWalker-1.5.ebuild:
  Marking sparc stable

  09 Apr 2007; Michael Cummings <mcummings@gentoo.org> PadWalker-1.5.ebuild: