@@ -1,0 +1,17 @@
+# Copyright 1999-2012 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/PadWalker/PadWalker-1.930.0.ebuild,v 1.1 2012/02/08 14:34:08 tove Exp $
+
+EAPI=4
+
+MODULE_AUTHOR=ROBIN
+MODULE_VERSION=1.93
+inherit perl-module
+
+DESCRIPTION="play with other peoples' lexical variables"
+
+SLOT="0"
+KEYWORDS="~amd64 ~ppc ~sparc ~x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos"
+IUSE=""
+
+SRC_TEST="do"
