@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/PadWalker
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/PadWalker/ChangeLog,v 1.27 2011/09/04 11:22:51 tove Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/PadWalker/ChangeLog,v 1.28 2012/02/08 14:34:08 tove Exp $
+
+*PadWalker-1.930.0 (08 Feb 2012)
+
+  08 Feb 2012; Torsten Veller <tove@gentoo.org> +PadWalker-1.930.0.ebuild:
+  Version bump
 
   04 Sep 2011; Torsten Veller <tove@gentoo.org> -PadWalker-1.920.ebuild:
   Cleanup
